# MagicMacro

./: README.md  copy_to_usb.py  main_code.py  pyproject.toml
macros/: Empty.py  Mouse_Controller.py  Music_Controller.py  System.py  example_board.py  example_board_v2.py  repetition_tests.py
macros/Examples/: example_board_v2.py
magic_macro/: config.py
magic_macro/action_queue/: action_list.py  action_queue.py  queue.py  queue_elem.py
magic_macro/display_handler/: display_groups.py  display_handler.py
magic_macro/keyboard_handler/: keyboard_handler.py  single_key.py
magic_macro/macro_board_handler/: button.py  button_action.py  macro_board.py  macro_board_handler.py
magic_macro/macro_executor/: macro_executor.py
magic_macro/macro_pad/: macro_pad.py
magic_macro/utils/: context.py  enums.py  macro_loader.py  pub_sub.py
